Renamed Generic Jar and fixed zoom level issue in Generic Plugin MH3-61114

--- a/plugin_source/generic_plugin/pom.xml
+++ b/plugin_source/generic_plugin/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.microchip.mh3.plugin</groupId>
-    <artifactId>generic_plugin_manager</artifactId>
+    <artifactId>generic_plugin</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -66,7 +66,7 @@
     </repositories>
 
     <build>
-        <finalName>generic_plugin_manager</finalName>
+        <finalName>generic_plugin</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -143,4 +143,5 @@
             </resource>
         </resources>
     </build>
+    <name>generic_plugin</name>
 </project>
