Registerd a call back to receive console logs from JXBrowser So able to log it in MCC logging window.  MH3-69471

--- a/plugin_source/generic_plugin/pom.xml
+++ b/plugin_source/generic_plugin/pom.xml
@@ -23,7 +23,7 @@
             <artifactId>Harmony3Library</artifactId>
             <scope>system</scope>
             <version>1.0</version>
-            <systemPath>${env.USER_HOME_DIR}/.mcc/libraries/Harmony3Library_v1.1.0/Harmony3Library.jar</systemPath>
+            <systemPath>${user.home}/.mcc/libraries/Harmony3Library_v1.1.1/Harmony3Library.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>jxbrowser</groupId>
